--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     "type": "project",
     "require": {
 		"php": ">=5.4",
-        "guzzlehttp/guzzle": "^6.0",
-        "vlucas/phpdotenv": "^2.4"
+        "guzzlehttp/guzzle": "^6.2"
     },
 	"require-dev": {
-		"phpunit/phpunit": "5.2.*"
+		"phpunit/phpunit": "5.2.*",
+        "vlucas/phpdotenv": "^2.4"
     },
 	"autoload": {
         "psr-4": {
