--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
 		"php": ">=5.4",
         "guzzlehttp/guzzle": "^6.2",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "nesbot/carbon": "^1.22"
     },
 	"require-dev": {
 		"phpunit/phpunit": "5.2.*"
