fixed test to allow for listings that don't have images

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "info@homeup.ca"
         }
     ],
-    "type": "project",
+    "type": "library",
     "require": {
 		"php": ">=5.4",
         "guzzlehttp/guzzle": "^6.2",
