change package to mmm

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "homeup/homeup-api-php",
+    "name": "mymediamagnet/homeup-api-php",
     "description": "Access to the centralized database API.",
     "keywords": ["api", "mls", "package"],
     "license": "DBAD",
@@ -11,8 +11,8 @@
     ],
     "type": "library",
     "require": {
-		"php": ">=5.4",
-        "guzzlehttp/guzzle": "^6.2",
+		"php": ">=7.1.0",
+        "guzzlehttp/guzzle": "*",
         "vlucas/phpdotenv": "^2.4",
         "nesbot/carbon": "^1.22"
     },
