--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "type": "library",
     "require": {
 		"php": ">=7.1.0",
-        "guzzlehttp/guzzle": "*",
+        "guzzlehttp/guzzle": "^6.0",
         "vlucas/phpdotenv": "^2.4",
         "nesbot/carbon": "^1.22"
     },
